# mini-gpt-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  EDUCATIONAL_LOGGING.md  README.md  WARP.md  benchmark_results.txt  chunks_output.txt
data/: corpus_pt_br.txt
examples/: attention_demo.rs  benchmarks_demo.rs  chunking_examples.rs  cli_sync_example.rs  educational_logger_demo.rs  kernels_demo.rs  model_demo.rs  tokenizer_demo.rs  transformer_demo.rs
examples/educational/: embeddings_explained.rs  gradient_computation.rs  inference_engine.rs  memory_management.rs  optimization_techniques.rs  tokenization_process.rs  training_system.rs  transformer_architecture.rs
interativos/: advanced_attention.html  advanced_feedforward.html  advanced_sampling.html  advanced_transformer.html  attention.html  chunking.html  embeddings.html  feed_forward.html  index.html  inference.html  layer_normalization.html  loss_function.html  model_comparison.html  multi_head_attention.html  positional_encoding.html  residual_connections.html  sample.html  sampling_strategies.html  tokenization.html  training.html  transformer.html
interativos/css/: design-system.css
interativos/js/: advanced-visualizations.js  inference-ui.js  integration.js
src/: attention.rs  benchmarks.rs  chunking.rs  demo_bridge.rs  educational_logger.rs  kernels.rs  main.rs  model.rs  tokenizer.rs  training.rs  transformer.rs  web_demo_integration.rs  web_server.rs
