[package]
name = "mini-gpt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tensor e computação numérica com suporte Metal
candle-core = { version = "0.8", features = ["metal"] }  # Framework com Metal GPU
candle-nn = { version = "0.8", features = ["metal"] }    # Camadas neurais com Metal
candle-transformers = { version = "0.8", features = ["metal"] }  # Transformers com Metal
ndarray = "0.15"              # Arrays multidimensionais

# Tokenização e processamento de texto
tokenizers = "0.15"           # Tokenização BPE da HuggingFace
unicode-segmentation = "1.10" # Segmentação Unicode para PT-BR

# Serialização e I/O
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"          # Formato eficiente para salvar modelos

# Utilitários
anyhow = "1.0"               # Tratamento de erros
rand = "0.8"                 # Números aleatórios
async-stream = "0.3"         # Streams assíncronos
indicatif = "0.17"           # Barras de progresso
clap = { version = "4.0", features = ["derive"] } # CLI
thiserror = "1.0"            # Tratamento de erros estruturados
chrono = { version = "0.4", features = ["serde"] } # Timestamps para checkpoints
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP para sincronização

# Otimização e treinamento
candle-optimisers = "0.8"     # Otimizadores (Adam, SGD, etc.)

# Servidor web para interativos
axum = { version = "0.7", features = ["ws", "macros"] } # Framework web async com WebSockets
tokio = { version = "1.0", features = ["full"] } # Runtime async
tower = "0.4"                # Middleware
tower-http = { version = "0.5", features = ["fs", "cors"] } # Servir arquivos estáticos
mime_guess = "2.0"           # Detecção de MIME types
axum-extra = { version = "0.9", features = ["typed-header"] } # Extensões Axum
futures-util = "0.3"         # Utilitários para futures
tokio-tungstenite = "0.21"   # WebSocket implementation
uuid = { version = "1.0", features = ["v4", "serde"] } # IDs únicos
dashmap = "5.5"              # HashMap thread-safe
broadcast = "0.1"            # Canal de broadcast

# Suporte condicional para Metal (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = "0.8"  # Kernels Metal para ARM Apple

# Exemplos educacionais
[[example]]
name = "transformer_architecture"
path = "examples/educational/transformer_architecture.rs"

[[example]]
name = "tokenization_process"
path = "examples/educational/tokenization_process.rs"

[[example]]
name = "embeddings_explained"
path = "examples/educational/embeddings_explained.rs"

[profile.release]
opt-level = 3
lto = true                   # Link-time optimization
codegen-units = 1           # Melhor otimização